Fix post visibility icon

--- a/frontend/static/css/layout.css
+++ b/frontend/static/css/layout.css
@@ -166,6 +166,10 @@
         justify-self: start;
         align-self: start;
         z-index: 1;
+
+        display: flex;
+        flex-wrap: wrap;
+        gap: 5px;
     }
 
 .profile-card {
